<resources>
    <string name="app_name">Test Yourself</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_show_fragment_hello">Test yourself proqramına xoş gəldiniz</string>
    <string name="login">Giriş</string>
    <string name="resgiter">Qeydiyyat</string>
    <string name="name">Emailinizi daxil edin</string>
    <string name="password">Şifrənizi daxil edin</string>
    <string name="password_repeat">Şifrənizi təkrar yazın</string>
    <string name="login_button">Daxil ol</string>
    <string name="register_button">Təsdiqlə</string>
    <string name="forgot_password"><u>Şifrəmi unutdum</u></string>
    <string name="first_slide_header">Gənc müəllimlərimizi yeni suallar tərtib edərək ölkə gəncləri üçün sualları əlçanat etməyə dəvət edirik</string>
    <string name="second_slide_header">Artıq öz biliklərinizi istənilən yerdə və istənilən zaman test edə biləcəksiniz</string>
    <string name="finished_OnBoarding_btn">Başla</string>
    <string name="student">Şagird</string>
    <string name="teacher">Müəllim</string>
    <string name="exams">Sınaqlar</string>
    <string name="student_group">Qruplar</string>
    <string name="result_exams">Nəticələr</string>
    <string name="open">Ac</string>
    <string name="close">Bagla</string>
    <string name="home">Əsas</string>
    <string name="news">Bildiriş</string>
    <string name="user_profile">İstifadəçi səhifəsi</string>
    <string name="exit">Çıxış</string>
    <string name="all_true_answers">Ümumi düzgün cavab :</string>
    <string name="all_false_answers">Ümumi səhv cavab :</string>
    <string name="all_null_answers">Ümumi boş cavab :</string>
    <string name="full_name">Ad Soyad</string>
    <string name="first_name">Ad</string>
    <string name="last_name">Soyad</string>
    <string name="age">18</string>
    <string name="confirm">Təsdiq</string>
    <string name="cancel">Ləğv</string>
    <string name="test_number">Test 1</string>
    <string name="write_test_question">Test sualını yazın</string>
    <string name="write_test_true_answer">Test düzgün cavabını yazın</string>
    <string name="write_test_false_answer">Test səhv cavabını yazın</string>
    <string name="test_time">Test üçün vaxt təyin edin saniyə ilə</string>
    <string name="next">Növbəti</string>
    <string name="new_test">Yeni test əlavə edirsiniz</string>
    <string name="app_exit">Çıxış</string>
    <string name="form_problem">Formu düzgün doldurun</string>
    <string name="password_validate">Şifrədə ən azı 7 simvol olmalıdır</string>
    <string name="password_repeat_problem">Şifrə ilə təkrar şifrə uyğun deyil</string>
    <string name="email_validate">Emaili düzgün yazın</string>
    <string name="problem">Xəta bas verdi</string>
    <string name="yes">Hə</string>
    <string name="no">Yox</string>
    <string name="true_string">Doğru</string>
    <string name="false_string">Səhv</string>
    <string name="null_string">Boş</string>
    <string name="send_new_password">Yeni şifrə emailinizə göndərildi</string>



</resources>