<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/homeLayoutTeacherFragment"
            android:icon="@drawable/ic_baseline_house_24"
            android:title="@string/home"
             />

        <item
            android:id="@+id/news"
            android:title="@string/news"
            android:icon="@drawable/ic_baseline_notifications_24"
            />


        <item
            android:id="@+id/results"
            android:title="@string/result_exams"
            android:icon="@drawable/assessment"
            />


        <item
            android:id="@+id/user_profile"
            android:title="@string/user_profile"
            android:icon="@drawable/ic_baseline_person_24"
            />


        <item
            android:id="@+id/teacher_signOut"
            android:title="@string/exit"
            android:icon="@drawable/ic_baseline_logout_24"
            />

    </group>

</menu>