<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragments.login.LoginOrSignUpFragment"
    android:background="@drawable/gradient_3">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageView"
        android:layout_marginTop="180dp"
        android:padding="15dp"
        android:background="@drawable/login_shape"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            >
            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:gravity="center"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resgiter"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="28sp" />
        </LinearLayout>


    <EditText
        android:id="@+id/login_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/email"
        android:hint="@string/name"
        android:background="@drawable/input_bacground"
        android:paddingVertical="15dp"
        android:paddingHorizontal="20dp"
        android:shadowColor="@color/black"
        android:shadowDx="1.2"
        android:textCursorDrawable="@null"
        android:shadowDy="1.2"
        android:shadowRadius="1.5"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        android:drawableStart="@drawable/lock"
        android:inputType="textPassword"
        android:background="@drawable/input_bacground"
        android:paddingVertical="15dp"
        android:paddingHorizontal="20dp"
        android:shadowColor="@color/black"
        android:shadowDx="1.2"
        android:shadowDy="1.2"
        android:shadowRadius="1.5"/>

        <LinearLayout
            android:id="@+id/register_layout_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

    <EditText
        android:id="@+id/password_repeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:hint="@string/password_repeat"
        android:inputType="textPassword"
        android:background="@drawable/input_bacground"
        android:paddingVertical="15dp"
        android:paddingHorizontal="20dp"
        android:shadowColor="@color/black"
        android:shadowDx="1.2"
        android:textCursorDrawable="@null"
        android:shadowDy="1.2"
        android:shadowRadius="1.5"/>

    <RadioGroup
        android:id="@+id/login_or_signUp_radioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <RadioButton
            android:id="@+id/login_or_signUp_first_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacher"/>
        <View
            android:layout_width="50dp"
            android:layout_height="5dp"/>
        <RadioButton
            android:id="@+id/login_or_signUp_second_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student"/>
    </RadioGroup>

            <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/register_button"
                android:focusable="true"
                android:clickable="true"
                android:textColor="@color/white"
                android:foreground="?android:attr/selectableItemBackground"
                android:enabled="false"
                android:background="@drawable/input_bacground"
                android:paddingVertical="10dp"
                android:paddingHorizontal="20dp"
                app:layout_constraintTop_toBottomOf="@+id/login_or_signUp_radioButton" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/signIn_layout_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <Button
                android:id="@+id/signIn_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/login_button"
                android:focusable="true"
                android:clickable="true"
                android:layout_gravity="center"
                android:foreground="?android:attr/selectableItemBackground"
                android:background="@drawable/input_bacground"
                android:paddingVertical="10dp"
                android:paddingHorizontal="20dp"
                app:layout_constraintTop_toBottomOf="@+id/login_or_signUp_radioButton" />

            <LinearLayout
            android:id="@+id/layout_OR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/black"
                />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/black"
                />

        </LinearLayout>


        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/forgot_password" />

    </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>